hphp/test/zend/good/ext/gd/tests/copy.php.skipif
<?hh
<<__EntryPoint>> function main() {
if (!function_exists('imagecopy')) die("skip gd extension not available\n");
}
