hphp/test/zend/bad/ext/mysqli/tests/mysqli_enable_reads_from_master.php.skipif
<?php
require_once('skipif.inc');
require_once('skipifemb.inc');
require_once('skipifconnectfailure.inc');

if (!function_exists('mysqli_enable_reads_from_master')) {
	die("skip function mysqli_enable_reads_from_master() not available\n");
}
?>